# computer_vision

./: .gitignore  CMakeLists.txt  README.md
docs/hw1/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake  example.cpp  homework1.cpp
images/hw_2_img/: hw2
scripts/ImageTransformation/: CMakeLists.txt
scripts/ImageTransformation/src/: imageTransformation.cc
scripts/NoisFiltering/: CMakeLists.txt
scripts/NoisFiltering/src/: noisefiltering.cc
scripts/SobelEdgeDetection/: CMakeLists.txt
scripts/SobelEdgeDetection/src/: edgedetection.cc
scripts/beauty_shot/: CMakeLists.txt
scripts/beauty_shot/src/: beauty_shot.cc
scripts/filter_ws/: CMakeLists.txt
scripts/filter_ws/src/: asd.cc  filter_default.cc  filters.cc
scripts/homework1_ws/: .gitignore  CMakeLists.txt  homework_1.cpp
scripts/interpolation_n_rotation/: .gitignore  CMakeLists.txt  bilinear_interpolation.cpp  rotation.cpp
src/: pixel_test  pixel_test.cpp
